termine todos los cambios

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description=" content="Somos una empresa dedicada al solucionar problemas en el hogar, mediante el consejo util de profesionales capacitados" >
+    <meta name="keywords" content="obreros, arreglos, reparaciones, hogar, soluciones, herrameintas, emergencias, ">
     <title>SASS Y SEO</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
